<resources>
    <string name="app_name">MIDAS</string>
    <string name="cuenta_destino">Cuenta Destino</string>
    <string name="name_des">Name Des</string>
    <string name="monto">Monto</string>
    <string name="fecha">Fecha</string>
    <string name="nombre_origen">Nombre Origen</string>
    <string name="tipo_transferencia">Tipo Transferencia</string>
    <string name="ingresar_clave">Ingresar Clave</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingrese_su_identificador">Ingrese su Identificador</string>
    <string name="gestionar_reportes">Gestionar Reportes</string>
    <string name="gestionar_usuarios">Gestionar Usuarios</string>
    <string name="m_ximo_500_caracteres">máximo 500 caracteres</string>
    <string name="ingresa_el_monto">Ingresa el monto</string>
    <string name="error_icon">error_icon</string>
    <string name="por_favor_ingrese_todos_los_campos">Por favor ingrese todos los campos</string>
    <string name="hi_user">Hi User!</string>
    <string name="check_icon">check icon</string>
    <string name="entidad">entidad</string>
</resources>