<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#FFFFFFFF">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/check_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/snackbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_user"
            android:textColor="#23DC2B"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/snackbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/por_favor_ingrese_todos_los_campos"
            android:textColor="#23DC2B"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
