<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:background="@drawable/fondo_casilla_monto"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="278dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accountDesNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/item_usuario"
                android:fontFamily="@font/poppins"
                android:text="@string/name_des"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/transBalanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/monto"
                android:textColor="@color/newoscuro_botones"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/logo_nuevo_midas" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accountDestIdTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/cuenta_destino"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/tipoTransferenciaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Fecha transferencia"
            android:textColor="@color/gris_textos"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
